Move jpckage plugin back to pom.xml of app module and attempt to fix jpackage github workflow