@@ -99,27 +99,6 @@
                     <release>25</release>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>jpackage-maven-plugin</artifactId>
-                <version>1.7.1</version>
-                <configuration>
-                    <name>jemu</name>
-                    <type>APP_IMAGE</type>
-                    <mainJar>${project.build.finalName}.jar</mainJar>
-                    <input>${project.build.directory}</input>
-                    <mainClass>io.github.arkosammy12.jemu.app.Main</mainClass>
-                    <runtimeImage>${java.home}</runtimeImage>
-                    <destination>${project.build.directory}/dist</destination>
-                    <removeDestination>true</removeDestination>
-                    <javaOptions>
-                        <option>-Dfile.encoding=UTF-8</option>
-                        <option>--enable-native-access=ALL-UNNAMED</option>
-                        <option>-XX:+UseZGC</option>
-                        <option>-XX:+UseCompactObjectHeaders</option>
-                    </javaOptions>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
